--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <header class="page-header">
-     <h1 class="project-name"> <a class="header-link" href="{{ site.baseurl }}/"> {{ site.title }}</a></h1>
-     <!--<h3 style="font-weight: lighter;">a blog for <a class="header-link" href="http://canijustgo.com/" target="_blank">canijustgo.com</a></h3>-->
+     <h1 class="project-name"> <a class="header-link" href="{{ site.baseurl }}/about"> {{ site.title }}</a></h1>
+     <h3><a class="header-link" href="{{ site.baseurl }}/about">Fighting to save our community</a></h3>
      </header>
